; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_datetime.c_DetermineTimeZoneAbbrevOffset.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_datetime.c_DetermineTimeZoneAbbrevOffset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pg_tm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DetermineTimeZoneAbbrevOffset(%struct.pg_tm* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pg_tm*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.pg_tm* %0, %struct.pg_tm** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %12 = load %struct.pg_tm*, %struct.pg_tm** %5, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = call i32 @DetermineTimeZoneOffsetInternal(%struct.pg_tm* %12, i32* %13, i32* %8)
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %8, align 4
  %16 = load i8*, i8** %6, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = call i64 @DetermineTimeZoneAbbrevOffsetInternal(i32 %15, i8* %16, i32* %17, i32* %10, i32* %11)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %3
  %21 = load i32, i32* %11, align 4
  %22 = load %struct.pg_tm*, %struct.pg_tm** %5, align 8
  %23 = getelementptr inbounds %struct.pg_tm, %struct.pg_tm* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  %24 = load i32, i32* %10, align 4
  store i32 %24, i32* %4, align 4
  br label %27

25:                                               ; preds = %3
  %26 = load i32, i32* %9, align 4
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %25, %20
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @DetermineTimeZoneOffsetInternal(%struct.pg_tm*, i32*, i32*) #1

declare dso_local i64 @DetermineTimeZoneAbbrevOffsetInternal(i32, i8*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
